--- a/i18n/en/docusaurus-plugin-content-docs/current/04-io/_category_.json
+++ b/i18n/en/docusaurus-plugin-content-docs/current/04-io/_category_.json
@@ -1,5 +1,5 @@
 {
-  "label": "net",
+  "label": "\uD83D\uDD04 Stream Control",
   "link": {
     "type": "generated-index",
     "description": "-"
