--- a/i18n/en/docusaurus-plugin-content-docs/current/02-install/_category_.json
+++ b/i18n/en/docusaurus-plugin-content-docs/current/02-install/_category_.json
@@ -1,5 +1,5 @@
 {
-  "label": "\uD83E\uDDE9 扩展 | Extensions",
+  "label": "🔧 Installation",
   "link": {
     "type": "generated-index",
     "description": "-"
