--- a/i18n/en/docusaurus-theme-classic/footer.json
+++ b/i18n/en/docusaurus-theme-classic/footer.json
@@ -8,7 +8,7 @@
     "description": "The label of footer link with label=源代码 linking to https://github.com/cloudtay/p-ripple-core"
   },
   "copyright": {
-    "message": "Copyright © 2024 PRipple, Inc. Built with Docusaurus.",
+    "message": "Copyright © 2024 Ripple, Inc. Built with Docusaurus.",
     "description": "The footer copyright"
   }
 }
