--- a/i18n/zh/docusaurus-theme-classic/footer.json
+++ b/i18n/zh/docusaurus-theme-classic/footer.json
@@ -5,10 +5,10 @@
   },
   "link.item.label.源代码": {
     "message": "源代码",
-    "description": "The label of footer link with label=源代码 linking to https://github.com/cloudtay/p-ripple-core"
+    "description": "The label of footer link with label=源代码 linking to https://github.com/cloudtay/ripple"
   },
   "copyright": {
-    "message": "Copyright © 2024 Ripple, Inc. Built with Docusaurus.",
+    "message": "Copyright © 2024 ripple, Inc. Built with Docusaurus.",
     "description": "The footer copyright"
   }
 }
