--- a/i18n/zh/docusaurus-theme-classic/navbar.json
+++ b/i18n/zh/docusaurus-theme-classic/navbar.json
@@ -1,6 +1,6 @@
 {
   "logo.alt": {
-    "message": "Ripple",
+    "message": "ripple",
     "description": "The alt text of navbar logo"
   },
   "item.label.Docs": {
