Update: update path & baseUrl

--- a/i18n/zh/docusaurus-theme-classic/navbar.json
+++ b/i18n/zh/docusaurus-theme-classic/navbar.json
@@ -10,5 +10,9 @@
   "item.label.Source Code": {
     "message": "源代码",
     "description": "Navbar item with label Source Code"
+  },
+  "item.label.FAQ": {
+    "message": "交流&问答",
+    "description": "Navbar item with label FAQ"
   }
 }
